Bug #1242 - Mobile iOS: Homepage Slider text area too narrow

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -789,6 +789,9 @@ body{
                     p{
                         font-size: (@font-size-base - 1);
                     }
+                    @media (max-width: @screen-xs-max){
+                        width: 72%;
+                    }
                 }
                 .camera_prev, 
                 .camera_next{
